add code to add divs on DOM loaded

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </h1>
     <div class="game-area">
         <div class="game-building"></div>
+        <div class="timer">Time:</div>
         <button id="start-game" data-type="start-game">Start!</button>
         <button id="leaderboard" data-type="leaderboard">View Leaderboard</button>
     </div>
