add countdown timer and buttons for navigation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     </h1>
     <div class="game-area">
         <div class="game-building"></div>
-        <div class="timer">Time:</div>
+        <div id="timer"></div>
+    <div class="controls">
+        <button id="move-up">move up</button>
+        <button id="move-left">move left</button>
+        <button id="move-right">move right</button>
+        <button id="move-down">move down</button>
+    </div>
         <button id="start-game" data-type="start-game">Start!</button>
         <button id="leaderboard" data-type="leaderboard">View Leaderboard</button>
     </div>
