Add runGame function

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
         <div class="game-building"></div>
         <div id="timer"></div>
     <div class="controls">
-        <button id="move-up">move up</button>
-        <button id="move-left">move left</button>
-        <button id="move-right">move right</button>
-        <button id="move-down">move down</button>
+        <button class="nav-btn" id="up">move up</button>
+        <button class="nav-btn" id="left">move left</button>
+        <button class="nav-btn" id="right">move right</button>
+        <button class="nav-btn" id="down">move down</button>
     </div>
-        <button id="start-game" data-type="start-game">Start!</button>
-        <button id="leaderboard" data-type="leaderboard">View Leaderboard</button>
+        <button class="menu" data-type="start-game">Start!</button>
+        <button class="menu" data-type="leaderboard">View Leaderboard</button>
     </div>
+    <div id="overlay"></div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
