fixed player position and player movement

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button class="menu" data-type="start-game">Start!</button>
         <button class="menu" data-type="leaderboard">View Leaderboard</button>
     </div>
-    <div id="overlay"></div>
+    <div id="leaderboard-overlay"></div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
