--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <button class="menu" data-type="leaderboard">View Leaderboard</button>
     </div>
     <div id="leaderboard-overlay"></div>
+    <div id="victory-screen-overlay"></div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
