add game timer and tidy up

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h1>
     <div class="game-area">
         <div class="game-building"></div>
-        <div id="timer"></div>
+        <div id="countdown"></div>
     <div class="controls">
         <button class="nav-btn" id="up">move up</button>
         <button class="nav-btn" id="left">move left</button>
