--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
         <div class="game-building"></div>
         <div id="countdown"></div>
     <div class="controls">
-        <button class="nav-btn" id="up">move up</button>
-        <button class="nav-btn" id="left">move left</button>
-        <button class="nav-btn" id="right">move right</button>
-        <button class="nav-btn" id="down">move down</button>
+        <div class="nav-anchor navigation"></div>
+        <button class="nav-btn navigation" id="up"><i class="fa-solid fa-arrow-up"></i></button>
+        <div class="nav-anchor navigation"></div>
+        <button class="nav-btn navigation" id="left"><i class="fa-solid fa-arrow-left"></i></button>
+        <div class="nav-anchor navigation"></div>
+        <button class="nav-btn navigation" id="right"><i class="fa-solid fa-arrow-right"></i></button>
+        <div class="nav-anchor navigation"></div>
+        <button class="nav-btn navigation" id="down"><i class="fa-solid fa-arrow-down"></i></button>
+        <div class="nav-anchor navigation"></div>
     </div>
         <button class="menu" data-type="start-game">Start!</button>
         <button class="menu" data-type="leaderboard">View Leaderboard</button>
