added style and added aria labels to essential elements

--- a/index.html
+++ b/index.html
@@ -17,19 +17,17 @@
         <div id="countdown"></div>
     <div class="controls">
         <div class="nav-anchor navigation"></div>
-        <button class="nav-btn navigation" id="up"><i class="fa-solid fa-arrow-up"></i></button>
+        <button class="nav-button navigation" id="up" aria-label="navigation button up"><i class="fa-solid fa-arrow-up"></i></button>
         <div class="nav-anchor navigation"></div>
-        <button class="nav-btn navigation" id="left"><i class="fa-solid fa-arrow-left"></i></button>
+        <button class="nav-button navigation" id="left" aria-label="navigation button left"><i class="fa-solid fa-arrow-left"></i></button>
         <div class="nav-anchor navigation"></div>
-        <button class="nav-btn navigation" id="right"><i class="fa-solid fa-arrow-right"></i></button>
+        <button class="nav-button navigation" id="right" aria-label="navigation button right"><i class="fa-solid fa-arrow-right"></i></button>
         <div class="nav-anchor navigation"></div>
-        <button class="nav-btn navigation" id="down"><i class="fa-solid fa-arrow-down"></i></button>
+        <button class="nav-button navigation" id="down" aria-label="navigation button down"><i class="fa-solid fa-arrow-down"></i></button>
         <div class="nav-anchor navigation"></div>
     </div>
-        <button class="menu" data-type="start-game">Start!</button>
-        <button class="menu" data-type="leaderboard">View Leaderboard</button>
+        <button class="start-game" data-type="start-game">Start!</button>
     </div>
-    <div id="leaderboard-overlay"></div>
     <div id="victory-screen-overlay"></div>
     <script src="assets/js/script.js"></script>
 </body>
