added missing semicolons and removed unused code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button class="nav-button navigation" id="down" aria-label="navigation button down"><i class="fa-solid fa-arrow-down"></i></button>
         <div class="nav-anchor navigation"></div>
     </div>
-        <button class="start-game" data-type="start-game">Start!</button>
+        <button class="start-game" data-type="start-game">Start Game!</button>
     </div>
     <div id="victory-screen-overlay"></div>
     <script src="assets/js/script.js"></script>
